# aurum

./: Cargo.toml  README.md  config.json  teste.c  teste.txt
langs/c/: syntax  syntax.json
langs/cpp/: syntax  syntax.json
langs/json/: syntax.json
langs/rs/: syntax  syntax.json
langs/s/: syntax.json
src/: autocomplete.rs  config.rs  cursor.rs  editor.rs  main.rs  search.rs  select.rs  syntax.rs  text.rs  undo.rs  utils.rs
